Bug 61492 - EDITING:Bullet and text overlap in edit view when text font size is increased by using (ctrl +]) shortcut.
Summary: EDITING:Bullet and text overlap in edit view when text font size is increased...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: navin patidar
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-26 08:36 UTC by navin patidar
Modified: 2024-12-05 12:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (117.26 KB, image/png)
2013-02-26 08:36 UTC, navin patidar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description navin patidar 2013-02-26 08:36:36 UTC
Created attachment 75558 [details]
Screenshot

Steps to reproduce bug.
1.  Create a slide in impress.
2.  Toggle bullets on.
3.  Write text.
4.  Select text.
5.  Press (ctrl+]) few times.

Result :
Selected text size is increased but bullet and text overlap.
Comment 1 Yifan Jiang 2013-02-26 08:49:49 UTC
Hi Navin,

Am I right this issue only happens exactly when editing? i.e in my SLED, after seeing the problem, clicking somewhere else outside the text box, the bullet becomes correct immediately.

If you saw the exactly same thing, would you mark the status of the bug "New" since I can confirm it :) Thanks.
Comment 2 navin patidar 2013-02-26 09:10:50 UTC
(In reply to comment #1)
> Hi Navin,
> 
> Am I right this issue only happens exactly when editing? i.e in my SLED,
> after seeing the problem, clicking somewhere else outside the text box, the
> bullet becomes correct immediately.
> 
yes only happens in edit view.

> If you saw the exactly same thing, would you mark the status of the bug
> "New" since I can confirm it :) Thanks.

thanks
Comment 3 Commit Notification 2013-03-04 12:07:44 UTC
navin patidar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5b32d9c4406a68507ac9737ee0ada8bd1d424815

fix fdo#61492: update sd:View with FONTHEIGHT attribute changes.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.