fix fdo#61492: update sd:View with FONTHEIGHT attribute changes.

update sd:View with FONTHEIGHT attribute changes, so that
it can position bullet and text properly.

Change-Id: Ibf8c6423e64d194c2711d9c37b58de31f1c4c2dd